# granite-switch

./: .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  pyproject.toml
.github/: CODEOWNERS
docs/: GIT_WORKFLOW.md  SUPPORTED_MODELS.md  adapter_catalog.html  generate_benchmark_svg.py  race_live.html
kernels/: README.md  bench_utils.py  step1_baseline.py  step2_separate.py  step3_fused.py  step4_routing.py  step5_packed.py
src/granite_switch/: __init__.py  config.py
tests/: conftest.py
tests/composer/: _skinning_equivalence_worker.py  _skinning_equivalence_worker_vllm.py  test_adapter_filtering.py  test_adapter_loader.py  test_arch_skinning.py  test_built_in_adapters.py  test_chat_template.py  test_compose_e2e.py  test_debug_fields.py  test_hf_snapshot_commit.py  test_list_adapters_cli.py  test_model_card.py  test_save_load_compose.py  test_selective_download.py  test_skinning_equivalence.py  test_tokenizer_setup.py  test_upstream_files.py  test_validator.py  test_weight_remapper.py
tests/hf/: test_generation.py  test_granite4_fullsize.py  test_granite4_mini.py  test_kv_hiding_gap_equivalence.py  test_lora.py  test_model_forward.py  test_position_zero_nan.py  test_qk_norm.py  test_quantization.py  test_single_switch.py  test_single_switch_e2e.py
tests/integration/: test_hf_to_vllm_weights.py  test_switch_e2e_compose.py
tests/shared/: __init__.py  gap_equivalence.py  generation_models.py  granite4_constants.py  granite4_equivalence.py  lora_cases.py  position_zero_nan_cases.py  sequences.py  single_switch_cases.py  vllm_distributed.py  vllm_equivalence.py
tests/unit/: test_config.py  test_config_edge_cases.py  test_hiding_constant.py  test_sharpness_equivalence.py
tests/vllm/: __init__.py  _generation_equivalence_worker.py  _granite4_fullsize_tests.py  _granite4_mini_tests.py  (+23 more)
tutorials/: PREREQUISITES.md  README.md
(+80 files in other folders)
